depend on main analysis_options

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,23 +1,1 @@
-include: package:lint/analysis_options.yaml
-
-linter:
-  rules:
-    prefer_single_quotes: true
-    sort_pub_dependencies: true
-    use_setters_to_change_properties: false
-    avoid_positional_boolean_parameters: false
-    require_trailing_commas: false
-    sort_unnamed_constructors_first: false
-    unused_element: true
-    use_named_constants: true
-    always_use_package_imports: true
-    avoid_dynamic_calls: true
-
-
-analyzer:
-  exclude:
-    - '**/generated_plugin_registrant.dart'
-    - '**/.vscode/**'
-    - '**/*.g.dart'
-    - '**/*.gr.dart'
-    - '**/*.freezed.dart'
+include: ../../analysis_options.yaml
