--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,5 +8,5 @@ dependencies:
   latlong2: ^0.9.0
 
 dev_dependencies:
-  lint: ^2.1.1
-  test: ^1.8.3
+  lint: ^2.3.0
+  test: ^1.8.3 # necessary by flutter_test
